# Tiny3DRenderer

./: .gitignore  CMakeLists.txt  README.md  Triangles.tga  Triangles_filled.tga  WireFrame_light_intensity.tga  dimension2.cpp  dimension2.h  dimension3.cpp  dimension3.h  main.cpp  main.h  output.tga  pyproject.toml  requirements.txt  tgaimage.cpp  tgaimage.h
images/: Test_tedt.tga.tga  Triangles.tga  Triangles_filled.tga  WireFrame_light_intensity.tga  WireFrame_light_intensity_Zbuffer.tga  WireFrame_triangles_filled.tga  african_head_wireframe.tga
renderer/: camera.py  color.py  config.py  engine.py  geometry.py  light.py  main.py  model.py  object3d.py  renderer.py  scene.py  shaders.py  tool.py
renderer/conf/: default.json
renderer/tests/: perf_tests.py  test_color.py  test_geometry.py  test_renderer.py
src/: main.cpp
